--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
@@ -898,7 +898,7 @@
         <section id="Portfolio" class="portfolio">
             <div class="w-layout-blockcontainer container w-container">
                 <div class="portfolio-row">
-                    <div class="portfolio-section-title-wrap">
+                    <div class="portfolio-section-title-wrap">b
                         <div class="section-title-wrap-02">
                             <div data-w-id="fb19a3d3-cf66-65ef-7cf0-76b7d1bdbe33" style="opacity:0"
                                 class="section-title">
