--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 
                         </div>
                     </div>
-                    <a href="./" aria-current="page" class="navbar-brand w-nav-brand w--current">
+                    <a href="./index.html" aria-current="page" class="navbar-brand w-nav-brand w--current">
                         <img loading="lazy" src="./asset/image/logo-blk.png" alt="logo-stryker-small" class="logo" />
                         <img loading="lazy" src="./asset/image/nxllogo.png" alt="white-logo" class="white-logo" />
                         <img src="./asset/image/logo.png" alt="logo" class="logo-mobile">
@@ -71,11 +71,11 @@
             </div>
             <div class="global-menu">
                 <div class="global-menu__wrap">
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="/" aria-current="page"
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="/index.html" aria-current="page"
                         class="global-menu__item w--current">Home</a>
-                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="#Portfolio"
+                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="#"
                         class="global-menu__item">About Us</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#Services"
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#"
                         class="global-menu__item">Service</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="./contact.html"
