to add index page contact link

--- a/index.html
+++ b/index.html
@@ -346,8 +346,7 @@
                         class="global-menu__item">About Us</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#Services"
                         class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#"
-                        class="global-menu__item">Careers</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="./contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
@@ -435,7 +434,7 @@
                     </div>
                     <div data-w-id="8697f70c-91bd-ad59-6a17-5fda6648e34b" style="opacity:0" class="hero-right">
                         <div class="btn">
-                            <a href="/contact" data-w-id="31f89dd4-ce9f-b322-17f3-4316c92d73e0"
+                            <a href="./contact.html" data-w-id="31f89dd4-ce9f-b322-17f3-4316c92d73e0"
                                 class="button-one w-inline-block">
                                 <div class="button_text_two">Let’s Talk</div>
                                 <img loading="lazy"
@@ -614,10 +613,11 @@
                     </div>
 
                     <div class="service-item-wrap-02">
+
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/ui-ux" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="e7bd51a2-5386-b395-035a-60796a839116"
                                             class="service-collection-item-box _01">
                                             <div class="service-collection-item-left">
@@ -651,7 +651,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/groth" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="ceab2d20-3a1c-ba9f-e497-a82895c11426"
                                             class="service-collection-item-box _03">
                                             <div class="service-collection-item-left">
@@ -683,7 +683,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/branding" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="98d8c1a7-0b4d-dbb3-2afd-093321fe94a7"
                                             class="service-collection-item-box _04">
                                             <div class="service-collection-item-left">
@@ -715,7 +715,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/code" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="4529bd12-2561-7234-169a-b4c2a962a046"
                                             class="service-collection-item-box _05">
                                             <div class="service-collection-item-left">
@@ -746,7 +746,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/website" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="bc3e34db-8a7c-9ab1-4592-22fb8b7fef3a"
                                             class="service-collection-item-box _06">
                                             <div class="service-collection-item-left">
@@ -778,7 +778,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/website" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="bc3e34db-8a7c-9ab1-4592-22fb8b7fef3a"
                                             class="service-collection-item-box _06">
                                             <div class="service-collection-item-left">
@@ -810,7 +810,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="/services/website" class="service-link w-inline-block">
+                                    <a href="#" class="service-link w-inline-block">
                                         <div data-w-id="bc3e34db-8a7c-9ab1-4592-22fb8b7fef3a"
                                             class="service-collection-item-box _06">
                                             <div class="service-collection-item-left">
@@ -840,9 +840,11 @@
                         </div>
 
                     </div>
+
                 </div>
             </div>
         </section>
+
         <section id="Portfolio" class="portfolio">
             <div class="w-layout-blockcontainer container w-container">
                 <div class="portfolio-row">
@@ -1395,7 +1397,7 @@
                                 through beautiful, strategic design.Book a free discovery call</p>
                             <div data-w-id="4fc921ea-3e52-fa1d-e851-184a9e2602ce" style="opacity:0" class="project-btn">
                                 <div class="btn">
-                                    <a href="./contact" data-w-id="31f89dd4-ce9f-b322-17f3-4316c92d73e0"
+                                    <a href="./contact.html" data-w-id="31f89dd4-ce9f-b322-17f3-4316c92d73e0"
                                         class="button-one w-inline-block">
                                         <div class="button_text_two">Book a free call now</div>
                                         <img loading="lazy"
@@ -1457,7 +1459,7 @@
                                     <h5 class="pric">$899</h5>
                                 </div>
                                 <div class="btn btn-02">
-                                    <a href="/contact" data-w-id="1ddfe73c-d96b-f294-9751-4bf2ed8a3fa6"
+                                    <a href="./contact.html" data-w-id="1ddfe73c-d96b-f294-9751-4bf2ed8a3fa6"
                                         class="button-two w-inline-block">
                                         <div class="button_text_two two">Get Started Today</div>
                                         <img loading="lazy"
@@ -1517,7 +1519,7 @@
                                     <h5 class="pric">$1,699</h5>
                                 </div>
                                 <div class="btn">
-                                    <a href="/contact" data-w-id="31f89dd4-ce9f-b322-17f3-4316c92d73e0"
+                                    <a href="./contact.html" data-w-id="31f89dd4-ce9f-b322-17f3-4316c92d73e0"
                                         class="button-one w-inline-block">
                                         <div class="button_text_two">Get Started Today</div>
                                         <img loading="lazy"
