to adjust the footer logo size

--- a/contact.html
+++ b/contact.html
@@ -267,7 +267,7 @@
                         <div class="footer-item-left _03">
                             <img src="./asset/image/logo.png" loading="lazy"
                                 data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbca0" alt="footer-shap"
-                                class="footer-shap" />
+                                class="footer-shap footer-logo" />
                         </div>
                     </div>
                 </div><img loading="lazy"
