remove the unwanted

--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
         <section id="Portfolio" class="portfolio">
             <div class="w-layout-blockcontainer container w-container">
                 <div class="portfolio-row">
-                    <div class="portfolio-section-title-wrap">b
+                    <div class="portfolio-section-title-wrap">
                         <div class="section-title-wrap-02">
                             <div data-w-id="fb19a3d3-cf66-65ef-7cf0-76b7d1bdbe33" style="opacity:0"
                                 class="section-title">
