To add About page

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. https://webflow.com --><!-- Last Published: Sun Nov 16 2025 16:10:54 GMT+0000 (Coordinated Universal Time) -->
-<html  data-wf-page="689c183492836344984341f3"
-    data-wf-site="6878854b4782d46450f79836" lang="en">
+<html data-wf-page="689c183492836344984341f3" data-wf-site="6878854b4782d46450f79836" lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -71,12 +70,10 @@
             </div>
             <div class="global-menu">
                 <div class="global-menu__wrap">
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="/index.html" aria-current="page"
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="./index.html" aria-current="page"
                         class="global-menu__item w--current">Home</a>
-                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="#"
-                        class="global-menu__item">About Us</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#"
-                        class="global-menu__item">Service</a>
+                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="./about.html" class="global-menu__item">About Us</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="./index.html#Service" class="global-menu__item">Service</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="./contact.html"
                         class="global-menu__item">Contact Us</a>
@@ -138,7 +135,7 @@
                             </div>
                         </div> -->
                     </div>
-                    
+
                     <div class="contact-item-two">
                         <div class="contact-item-container">
                             <div class="contact-item-two-left">
@@ -158,8 +155,9 @@
                                             src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/688b5872f93a536baed4c6d7_email.svg"
                                             loading="lazy" alt="email" />
                                         <p class="number">info@nxltechnologies.com</p>
-                                    </a></div><img
-                                    src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689c2331c2d209a23a8b6838_contact-shap.avif"
+                                    </a>
+                                </div>
+                                <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689c2331c2d209a23a8b6838_contact-shap.avif"
                                     loading="lazy" alt="contact-shap" class="contact-shap" />
                             </div>
                             <div class="contact-item-two-right">
@@ -270,7 +268,8 @@
                                 class="footer-shap footer-logo" />
                         </div>
                     </div>
-                </div><img loading="lazy"
+                </div>
+                <img loading="lazy"
                     src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f4df655c7482dccc9d31_help-shape-1.avif"
                     alt="help-shape-1" class="help-shape-1 _02" /><img loading="lazy"
                     src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f52e5632001a61b103c1_help-shape-2.avif"
