--- a/index.html
+++ b/index.html
@@ -340,12 +340,10 @@
             </div>
             <div class="global-menu">
                 <div class="global-menu__wrap">
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="/" aria-current="page"
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="./index.html" aria-current="page"
                         class="global-menu__item w--current">Home</a>
-                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="#Portfolio"
-                        class="global-menu__item">About Us</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#Services"
-                        class="global-menu__item">Service</a>
+                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="./about.html" class="global-menu__item">About Us</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#" class="global-menu__item">Service</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="./contact.html"
                         class="global-menu__item">Contact Us</a>
