--- a/service/web-service.html
+++ b/service/web-service.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>NXL &#8211; About</title>
+    <title>NXL &#8211; Web-Service</title>
     <meta content="Contact" property="og:title" />
     <meta content="Contact" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -19,10 +19,10 @@
         type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "PT Sans:400,400italic,700,700italic", "Urbanist:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic", "Instrument Serif:regular,italic", "Geist:300,regular,500,600,700,800"] } });</script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="./asset/image/logo.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="./asset/image/logo.png" rel="apple-touch-icon" />
+    <link href="../asset/image/logo.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="../asset/image/logo.png" rel="apple-touch-icon" />
 
-    <link rel="stylesheet" href="./asset/css/custome.css">
+    <link rel="stylesheet" href="../asset/css/custome.css">
 </head>
 
 <body class="body">
@@ -48,10 +48,10 @@
 
                         </div>
                     </div>
-                    <a href="./index.html" aria-current="page" class="navbar-brand w-nav-brand w--current">
-                        <img loading="lazy" src="./asset/image/logo-blk.png" alt="logo-stryker-small" class="logo" />
-                        <img loading="lazy" src="./asset/image/nxllogo.png" alt="white-logo" class="white-logo" />
-                        <img src="./asset/image/logo.png" alt="logo" class="logo-mobile">
+                    <a href="../index.html" aria-current="page" class="navbar-brand w-nav-brand w--current">
+                        <img loading="lazy" src="../asset/image/logo-blk.png" alt="logo-stryker-small" class="logo" />
+                        <img loading="lazy" src="../asset/image/nxllogo.png" alt="white-logo" class="white-logo" />
+                        <img src="../asset/image/logo.png" alt="logo" class="logo-mobile">
                     </a>
 
                     <link rel="prefetch" href="/" />
@@ -70,12 +70,13 @@
             </div>
             <div class="global-menu">
                 <div class="global-menu__wrap">
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="./index.html" aria-current="page"
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="../index.html" aria-current="page"
                         class="global-menu__item w--current">Home</a>
-                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="./about.html" class="global-menu__item">About Us</a>
+                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="../about.html"
+                        class="global-menu__item">About Us</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="#" class="global-menu__item">Service</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="./contact.html"
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="../contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
                 <div class="global-menu-shap-left"></div>
@@ -94,74 +95,55 @@
             <div class="w-layout-blockcontainer service-single-container w-container">
                 <div class="service-single-row">
                     <div class="service-single-item">
-                        <p class="service-single-title">About&#8211;Us</p>
-                        <h4 class="heading-3">We Are Creating Modern & High Quality Software For Your Businesses</h4>
+                        <h4 class="heading-3">Web Services</h4>
                     </div>
                     <div class="service-single-img-wrap"><img
-                            src="https://nxltechnologies.com/assets/img/about-img-1.png" loading="lazy" alt=""
+                            src="https://nxltechnologies.com/assets/img/service-details-img-1.png" loading="lazy" alt=""
                             sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
-                            srcset="https://nxltechnologies.com/assets/img/about-img-1.png 500w, https://nxltechnologies.com/assets/img/about-img-1.png 800w, https://nxltechnologies.com/assets/img/about-img-1.png 1712w"
+                            srcset="https://nxltechnologies.com/assets/img/service-details-img-1.png 500w, https://nxltechnologies.com/assets/img/service-details-img-1.png  800w, https://nxltechnologies.com/assets/img/service-details-img-1.png   1712w"
                             class="service-single-img" /></div>
                     <div class="service-single-item">
                         <div class="w-richtext">
+                            <h4 class="heading-3">Empowering Your Digital Presence with Tailored Web Solutions</h4>
                             <p>
-                                Founded in 2024 by a group of passionate IT professionals, NXL Technologies began its
-                                journey with a vision to redefine the technology landscape through innovation and
-                                excellence. With a strong focus on developing cutting-edge applications and games, we
-                                embrace the latest technologies to deliver impactful solutions.
+                                At NXL Technologies, we provide a comprehensive range of web services designed to help
+                                businesses establish a strong online presence and drive digital transformation. Our
+                                offerings include custom web development, where we build responsive, scalable websites
+                                tailored to meet your business needs. We specialize in eCommerce solutions, helping you
+                                create seamless online stores with secure payment integrations and user-friendly
+                                interfaces.
                             </p>
                             <p>‍</p>
                             <p>
-                                Our story started in the vibrant city of Goa, where we established our first office.
-                                Driven by the overwhelming response and our rapid growth, we expanded our presence with
-                                another branch in Kochi, reinforcing our commitment to bringing high-quality IT services
-                                closer to businesses across regions.
+                                We also offer web application development, crafting interactive, dynamic applications
+                                that enhance user engagement and operational efficiency. Our website optimization
+                                services ensure faster load times and better SEO, improving your site's visibility and
+                                performance. Additionally, we provide website maintenance and support, ensuring your
+                                site remains secure, updated, and running smoothly.
                             </p>
                             <p>‍</p>
                             <p>
-                                Specializing in software development, gaming solutions, IT consulting, digital
-                                transformation, and cybersecurity, we strive to create solutions that drive growth and
-                                empower businesses. At NXL Technologies, our dedicated team combines creativity,
-                                technical expertise, and a forward-thinking approach to shape a smarter, more connected
-                                future for businesses worldwide.
+                                Whether you're a startup or an enterprise, NXL Technologies delivers innovative,
+                                high-performance web solutions that align with your goals and accelerate growth in
+                                today's digital world. Let us help you make an impact online!
                             </p>
                             <p>‍</p>
-                            <h6><strong>What you can expect</strong></h6>
+                            <h6><strong>Service Lists</strong></h6>
                             <p>‍</p>
-                            <p>- Customer-centric Approach</p>
-                            <p>- Teamwork</p>
-                            <p>- Continuous Learning</p>
-                            <!-- <p>- Organized, pixel-perfect files ready for development</p> -->
+                            <p>- Web Application Development</p>
+                            <p>- E-commerce Development</p>
+                            <p>- Content Management System (CMS)</p>
+                            <p>- Web Design and UI/UX</p>
+                            <p>- Web Analytics and Reporting</p>
+                            <p>- Web Hosting Solutions</p>
                         </div>
                     </div>
-                    <div class="service-single-item-img-wrap"><img
-                            src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b97aef0927b689df222_service-single-left.avif"
-                            loading="lazy" alt="" class="service-single-item-img" /><img
-                            src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0ba404a6599d295653f9_service-single-right.avif"
-                            loading="lazy" alt=""
-                            sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
-                            srcset="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0ba404a6599d295653f9_service-single-right-p-500.avif 500w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0ba404a6599d295653f9_service-single-right.avif 830w"
-                            class="service-single-item-img" />
-                    </div>
-                    <!-- <div class="service-single-item">
-                        <div class="w-richtext">
-                            <p>We combine user research, wireframing, prototyping, and visual design to deliver
-                                solutions that not only look great but also solve real user problems. By aligning design
-                                with your business goals, we help you create digital products that your customers love
-                                to use and your team is proud to showcase.</p>
-                            <p>‍</p>
-                            <h6><strong>Result</strong></h6>
-                            <p>‍</p>
-                            <p>We combine user research, wireframing, prototyping, and visual design to deliver
-                                solutions that not only look great but also solve real user problems. By aligning design
-                                with your business goals, we help you create digital products that your customers love
-                                to use and your team is proud to showcase.</p>
-                        </div>
-                    </div> -->
+                    <br><br>
+
                 </div>
             </div>
         </section>
-        <section class="choose-section">
+        <!-- <section class="choose-section">
             <div class="w-layout-blockcontainer service-single-container w-container">
                 <div class="choose-box">
                     <div class="choose-wrap">
@@ -327,7 +309,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="Contact" class="footer">
             <div class="footer-wrap">
                 <div class="footer-box">
@@ -447,14 +429,13 @@
                             </div>
                         </div>
                         <div class="footer-item-left _03">
-                            <img src="./asset/image/logo.png" loading="lazy"
+                            <img src="../asset/image/logo.png" loading="lazy"
                                 data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbca0" alt="footer-shap"
                                 class="footer-shap footer-logo" />
                         </div>
                     </div>
                 </div>
-                <img
-                    src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f4df655c7482dccc9d31_help-shape-1.avif"
+                <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f4df655c7482dccc9d31_help-shape-1.avif"
                     loading="lazy" alt="help-shape-1" class="help-shape-1 _02" /><img
                     src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f52e5632001a61b103c1_help-shape-2.avif"
                     loading="lazy" alt="help-shape-2" class="help-shape-2 _03" />
