to add mobile app page

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="#" class="service-link w-inline-block">
+                                    <a href="./service/mobile-app.html" class="service-link w-inline-block">
                                         <div data-w-id="e7bd51a2-5386-b395-035a-60796a839116"
                                             class="service-collection-item-box _01">
                                             <div class="service-collection-item-left">
@@ -1774,6 +1774,7 @@
                     loading="lazy" alt="help-shape-2" class="help-shape-2 _03" />
             </div>
         </section>
+
         <div class="back-to-top">
             <a href="#hero" class="back-to-top-link w-inline-block">
                 <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/689ac7b4b941bfeec54ee048_back-to-top.svg"
