To add cloud solution page

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
                         <div class="service-collection w-dyn-list">
                             <div role="list" class="service-collection-list w-dyn-items">
                                 <div role="listitem" class="service-collection-item w-dyn-item">
-                                    <a href="#" class="service-link w-inline-block">
+                                    <a href="./service/Cloud-Solutions.html" class="service-link w-inline-block">
                                         <div data-w-id="bc3e34db-8a7c-9ab1-4592-22fb8b7fef3a"
                                             class="service-collection-item-box _06">
                                             <div class="service-collection-item-left">
