to add the careers

--- a/careers.html
+++ b/careers.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>NXL &#8211; About</title>
+    <title>NXL &#8211; Careers</title>
     <meta content="Contact" property="og:title" />
     <meta content="Contact" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -39,11 +39,6 @@
                             </div>
                             <div class="call-wrap">
                                 <a href="tel:+917736960069" class="call">Contact Us</a>
-                                <!-- <div class="available-text-wrap">
-                                    <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6880882d5bf95b88c0110b7a_Ellipse-198.svg"
-                                        loading="lazy" alt="Crcile" class="ellipse-198" />
-                                    <div class="available-text">Available now</div>
-                                </div> -->
                             </div>
 
                         </div>
@@ -72,9 +67,12 @@
                 <div class="global-menu__wrap">
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabb" href="./index.html" aria-current="page"
                         class="global-menu__item w--current">Home</a>
-                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="./about.html" class="global-menu__item">About Us</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="./index.html#Services" class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="./careers.html" class="global-menu__item">Careers</a>
+                    <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="./about.html"
+                        class="global-menu__item">About Us</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="./index.html#Services"
+                        class="global-menu__item">Service</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="./careers.html"
+                        class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="./contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
@@ -93,48 +91,61 @@
         <section class="service-single">
             <div class="w-layout-blockcontainer service-single-container w-container">
                 <div class="service-single-row">
-                    <div class="service-single-item">
-                        <p class="service-single-title">About&#8211;Us</p>
-                        <h4 class="heading-3">We Are Creating Modern & High Quality Software For Your Businesses</h4>
-                    </div>
-                    <div class="service-single-img-wrap"><img
-                            src="https://nxltechnologies.com/assets/img/about-img-1.png" loading="lazy" alt=""
+                    <div class="service-single-img-wrap"><img src="./asset/image/joinourteam.jpg" loading="lazy" alt=""
                             sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
-                            srcset="https://nxltechnologies.com/assets/img/about-img-1.png 500w, https://nxltechnologies.com/assets/img/about-img-1.png 800w, https://nxltechnologies.com/assets/img/about-img-1.png 1712w"
-                            class="service-single-img" /></div>
+                            srcset="./asset/image/joinourteam.jpg 500w, ./asset/image/joinourteam.jpg 800w, ./asset/image/joinourteam.jpg 1712w"
+                            class="service-single-img" />
+                    </div>
+                    <div class="service-single-item">
+                        <p class="service-single-title">&#8212;Careers</p>
+                        <h4 class="heading-3">Join Our Team!</h4>
+                    </div>
+
                     <div class="service-single-item">
                         <div class="w-richtext">
                             <p>
-                                Founded in 2024 by a group of passionate IT professionals, NXL Technologies began its
-                                journey with a vision to redefine the technology landscape through innovation and
-                                excellence. With a strong focus on developing cutting-edge applications and games, we
-                                embrace the latest technologies to deliver impactful solutions.
+                                We are always looking for passionate and talented individuals to join our growing team.
+                                At NXL Technologies, we value creativity, teamwork, and innovation. If you’re ready to
+                                take on exciting challenges and work in a dynamic environment, we’d love to hear from
+                                you!
                             </p>
                             <p>‍</p>
                             <p>
-                                Our story started in the vibrant city of Goa, where we established our first office.
-                                Driven by the overwhelming response and our rapid growth, we expanded our presence with
-                                another branch in Kochi, reinforcing our commitment to bringing high-quality IT services
-                                closer to businesses across regions.
+                                We offer a collaborative and supportive workplace where your contributions are valued.
+                                Whether you're a seasoned professional or just starting your career, there are plenty of
+                                opportunities for growth and advancement.
                             </p>
                             <p>‍</p>
-                            <p>
-                                Specializing in software development, gaming solutions, IT consulting, digital
-                                transformation, and cybersecurity, we strive to create solutions that drive growth and
-                                empower businesses. At NXL Technologies, our dedicated team combines creativity,
-                                technical expertise, and a forward-thinking approach to shape a smarter, more connected
-                                future for businesses worldwide.
-                            </p>
-                            <p>‍</p>
-                            <h6><strong>What you can expect</strong></h6>
-                            <p>‍</p>
-                            <p>- Customer-centric Approach</p>
-                            <p>- Teamwork</p>
-                            <p>- Continuous Learning</p>
-                            <!-- <p>- Organized, pixel-perfect files ready for development</p> -->
                         </div>
                     </div>
-                    <div class="service-single-item-img-wrap"><img
+                    <div class="service-single-item">
+                        <p class="service-single-title">&#8212;How to Apply</p>
+                        <h4 class="heading-3">We’d Love to Hear From You</h4>
+                    </div>
+                    <div class="service-single-item">
+                        <div class="w-richtext">
+                            <p>
+                                If you're excited to join our team, please send your updated CV along with a cover
+                                letter to the following email address:
+                            </p>
+                            <p>‍</p>
+                            <p>
+                                <a data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc6f"
+                                    href="mailto:hr@nxltechnologies.com" class="call-link w-inline-block">
+                                    <p class="number">hr@nxltechnologies.com</p>
+                                </a>
+                            </p>
+                            <p>‍</p>
+                            <p>
+                                We are looking forward to reviewing your application and will get back to you as soon as
+                                possible.
+                            </p>
+                            <p>‍</p>
+                        </div>
+                    </div>
+
+
+                    <!-- <div class="service-single-item-img-wrap"><img
                             src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b97aef0927b689df222_service-single-left.avif"
                             loading="lazy" alt="" class="service-single-item-img" /><img
                             src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0ba404a6599d295653f9_service-single-right.avif"
@@ -142,26 +153,12 @@
                             sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
                             srcset="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0ba404a6599d295653f9_service-single-right-p-500.avif 500w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0ba404a6599d295653f9_service-single-right.avif 830w"
                             class="service-single-item-img" />
-                    </div>
-                    <!-- <div class="service-single-item">
-                        <div class="w-richtext">
-                            <p>We combine user research, wireframing, prototyping, and visual design to deliver
-                                solutions that not only look great but also solve real user problems. By aligning design
-                                with your business goals, we help you create digital products that your customers love
-                                to use and your team is proud to showcase.</p>
-                            <p>‍</p>
-                            <h6><strong>Result</strong></h6>
-                            <p>‍</p>
-                            <p>We combine user research, wireframing, prototyping, and visual design to deliver
-                                solutions that not only look great but also solve real user problems. By aligning design
-                                with your business goals, we help you create digital products that your customers love
-                                to use and your team is proud to showcase.</p>
-                        </div>
                     </div> -->
+                    <br>
                 </div>
             </div>
         </section>
-        <section class="choose-section">
+        <!-- <section class="choose-section">
             <div class="w-layout-blockcontainer service-single-container w-container">
                 <div class="choose-box">
                     <div class="choose-wrap">
@@ -327,7 +324,8 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
+
         <section id="Contact" class="footer">
             <div class="footer-wrap">
                 <div class="footer-box">
@@ -439,11 +437,6 @@
                                     <span class="nexo">NXL&#8211;Technologies</span>
                                     © 2025
                                 </p>
-                                <!-- <div data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc98" class="footer-link-wrap">
-                                    <a href="/admin-page/styleguide" class="footer-link-02">Styleguide</a>
-                                    <a href="/admin-page/licenses" class="footer-link-02">Licenses</a>
-                                    <a href="/admin-page/change-log" class="footer-link-02">Change Log</a>
-                                </div> -->
                             </div>
                         </div>
                         <div class="footer-item-left _03">
@@ -453,8 +446,7 @@
                         </div>
                     </div>
                 </div>
-                <img
-                    src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f4df655c7482dccc9d31_help-shape-1.avif"
+                <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f4df655c7482dccc9d31_help-shape-1.avif"
                     loading="lazy" alt="help-shape-1" class="help-shape-1 _02" /><img
                     src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/6885f52e5632001a61b103c1_help-shape-2.avif"
                     loading="lazy" alt="help-shape-2" class="help-shape-2 _03" />
