To add url link to nxl web site

--- a/service/web-service.html
+++ b/service/web-service.html
@@ -75,7 +75,7 @@
                     <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="../about.html"
                         class="global-menu__item">About Us</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services" class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html" class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="../contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
