--- a/service/ERP-solution.html
+++ b/service/ERP-solution.html
@@ -71,7 +71,7 @@
                         class="global-menu__item">About Us</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services"
                         class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="#" class="global-menu__item">Careers</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html" class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="../contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
