to update the content of address and mobile app image

--- a/index.html
+++ b/index.html
@@ -633,10 +633,10 @@
                                                 <img src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/68aadd7c3e2c6946afe78e9e_service-arrow-2.svg"
                                                     loading="lazy" alt="service-arrow-2" class="service-arrow-02" />
                                             </div>
-                                            <img src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui.avif"
+                                            <img src="./asset/image/mobile_app1.png"
                                                 loading="lazy" data-w-id="0e2bda9a-ee59-aee6-35ef-d33d52ac175d" alt=""
                                                 sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
-                                                srcset="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui-p-500.avif 500w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui-p-800.avif 800w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui.avif 1712w"
+                                                srcset="./asset/image/mobile_app1.png 500w, ./asset/image/mobile_app1.png 800w, ./asset/image/mobile_app1.png 1712w"
                                                 class="service-img" />
                                             <div data-w-id="22592eea-ff0e-20c7-7db2-5f7cdfeb2c56" class="service-bg">
                                             </div>
@@ -1700,9 +1700,6 @@
                     <div class="footer-container">
                         <div class="footer-item _03">
                             <div class="wrap">
-                                <p data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc84" class="footer-exar">
-                                    #809, 8th floor, Gera Imperium, Patto, Panjim, Goa 403001,
-                                </p>
                                 <p data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc84" class="footer-exar">
                                     4A, Bagheeratha Square, kacheripadi, Kochi,
                                 </p>
