--- a/service/mobile-app.html
+++ b/service/mobile-app.html
@@ -93,9 +93,9 @@
                         <h4 class="heading-3">Mobile App</h4>
                     </div>
                     <div class="service-single-img-wrap"><img
-                            src="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui.avif" loading="lazy" alt=""
+                            src="../asset/image/mobile_app1.png" loading="lazy" alt=""
                             sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
-                            srcset="https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui.avif 500w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui.avif  800w, https://cdn.prod.website-files.com/688de14ac9436b63c75efde2/68ac0b0bfc6971e1a6c0d958_uxui.avif   1712w"
+                            srcset="../asset/image/mobile_app1.png 500w, ../asset/image/mobile_app1.png  800w, ../asset/image/mobile_app1.png 1712w"
                             class="service-single-img" /></div>
                     <div class="service-single-item">
                         <div class="w-richtext">
@@ -186,9 +186,6 @@
                     <div class="footer-container">
                         <div class="footer-item _03">
                             <div class="wrap">
-                                <p data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc84" class="footer-exar">
-                                    #809, 8th floor, Gera Imperium, Patto, Panjim, Goa 403001,
-                                </p>
                                 <p data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc84" class="footer-exar">
                                     4A, Bagheeratha Square, kacheripadi, Kochi,
                                 </p>
