--- a/careers.html
+++ b/careers.html
@@ -357,7 +357,14 @@
                                         data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc79"
                                         id="Your-comment"></textarea><input type="submit" data-wait="Please wait..."
                                         data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc7a" class="message w-button"
-                                        value="Send Message" /></form>
+                                        value="Send Message" /></form><!-- Popup Box -->
+                                <div id="thankPopup" class="popup-overlay">
+                                    <div class="popup-box">
+                                        <h3>Thank you!</h3>
+                                        <p>Thanks for your valuable remark. We will get back to you soon.</p>
+                                        <button onclick="closePopup()" class="popup-btn">Close</button>
+                                    </div>
+                                </div>
                                 <div class="success-message w-form-done">
                                     <div class="thank">Thank you! Your submission has been received!</div>
                                 </div>
@@ -442,7 +449,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6878854b4782d46450f79836"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
+ <script src="./asset/js/custome.js"></script>   <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.ce27dc0b0564e9f1.js"
         type="text/javascript"></script>
