--- a/service/Cloud-Solutions.html
+++ b/service/Cloud-Solutions.html
@@ -69,8 +69,10 @@
                         class="global-menu__item w--current">Home</a>
                     <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="../about.html"
                         class="global-menu__item">About Us</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services" class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html" class="global-menu__item">Careers</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services"
+                        class="global-menu__item">Service</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html"
+                        class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="../contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
@@ -92,9 +94,8 @@
                     <div class="service-single-item">
                         <h4 class="heading-3">Cloud Solutions</h4>
                     </div>
-                    <div class="service-single-img-wrap"><img
-                            src="../asset/image/cloud-solutuion.jpg" loading="lazy" alt=""
-                            sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
+                    <div class="service-single-img-wrap"><img src="../asset/image/cloud-solutuion.jpg" loading="lazy"
+                            alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 726.625px, 939.15625px"
                             srcset="../asset/image/cloud-solutuion.jpg 500w, ../asset/image/cloud-solutuion.jpg  800w, ../asset/image/cloud-solutuion.jpg  1712w"
                             class="service-single-img" /></div>
                     <div class="service-single-item">
@@ -102,15 +103,26 @@
                             <h4 class="heading-3">Unlock the Power of the Cloud for Business Innovation</h4>
                             <br>
                             <p>
-                                At NXL Technologies, we offer comprehensive cloud solutions that enable businesses to scale efficiently, enhance collaboration, and reduce operational costs. Our cloud services include cloud infrastructure management, cloud storage, and cloud application development, ensuring your data and applications are secure, accessible, and always available.
+                                At NXL Technologies, we offer comprehensive cloud solutions that enable businesses to
+                                scale efficiently, enhance collaboration, and reduce operational costs. Our cloud
+                                services include cloud infrastructure management, cloud storage, and cloud application
+                                development, ensuring your data and applications are secure, accessible, and always
+                                available.
                             </p>
                             <p>‍</p>
                             <p>
-                                We work with leading cloud platforms such as AWS, Microsoft Azure, and Google Cloud, providing tailored solutions that align with your business needs. Whether you're migrating to the cloud, optimizing existing cloud setups, or building cloud-native applications, NXL Technologies delivers flexible, cost-effective solutions that grow with your business.
+                                We work with leading cloud platforms such as AWS, Microsoft Azure, and Google Cloud,
+                                providing tailored solutions that align with your business needs. Whether you're
+                                migrating to the cloud, optimizing existing cloud setups, or building cloud-native
+                                applications, NXL Technologies delivers flexible, cost-effective solutions that grow
+                                with your business.
                             </p>
                             <p>‍</p>
                             <p>
-                                Our cloud solutions improve productivity by enabling real-time collaboration, enhancing data security with encryption and compliance protocols, and supporting remote work capabilities. Let NXL Technologies guide your business to the cloud for a smarter, more agile future.
+                                Our cloud solutions improve productivity by enabling real-time collaboration, enhancing
+                                data security with encryption and compliance protocols, and supporting remote work
+                                capabilities. Let NXL Technologies guide your business to the cloud for a smarter, more
+                                agile future.
                             </p>
                             <p>‍</p>
                             <h6><strong>Service Lists</strong></h6>
@@ -171,7 +183,14 @@
                                         data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc79"
                                         id="Your-comment"></textarea><input type="submit" data-wait="Please wait..."
                                         data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc7a" class="message w-button"
-                                        value="Send Message" /></form>
+                                        value="Send Message" /></form><!-- Popup Box -->
+                                <div id="thankPopup" class="popup-overlay">
+                                    <div class="popup-box">
+                                        <h3>Thank you!</h3>
+                                        <p>Thanks for your valuable remark. We will get back to you soon.</p>
+                                        <button onclick="closePopup()" class="popup-btn">Close</button>
+                                    </div>
+                                </div>
                                 <div class="success-message w-form-done">
                                     <div class="thank">Thank you! Your submission has been received!</div>
                                 </div>
@@ -256,6 +275,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6878854b4782d46450f79836"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
+    <script src="../asset/js/custome.js"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.ce27dc0b0564e9f1.js"
