--- a/service/web-service.html
+++ b/service/web-service.html
@@ -74,8 +74,10 @@
                         class="global-menu__item w--current">Home</a>
                     <a data-w-id="ed2634f6-cce7-948e-48e3-77834c890035" href="../about.html"
                         class="global-menu__item">About Us</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services" class="global-menu__item">Service</a>
-                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html" class="global-menu__item">Careers</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabd" href="../index.html#Services"
+                        class="global-menu__item">Service</a>
+                    <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cac1" href="../careers.html"
+                        class="global-menu__item">Careers</a>
                     <a data-w-id="82e03af0-d35e-3942-652a-dc207ce4cabf" href="../contact.html"
                         class="global-menu__item">Contact Us</a>
                 </div>
@@ -353,7 +355,16 @@
                                         data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc79"
                                         id="Your-comment"></textarea><input type="submit" data-wait="Please wait..."
                                         data-w-id="f48f2c1b-b707-bf58-230b-80a78bccbc7a" class="message w-button"
-                                        value="Send Message" /></form>
+                                        value="Send Message" />
+                                </form>
+                                <!-- Popup Box -->
+                                <div id="thankPopup" class="popup-overlay">
+                                    <div class="popup-box">
+                                        <h3>Thank you!</h3>
+                                        <p>Thanks for your valuable remark. We will get back to you soon.</p>
+                                        <button onclick="closePopup()" class="popup-btn">Close</button>
+                                    </div>
+                                </div>
                                 <div class="success-message w-form-done">
                                     <div class="thank">Thank you! Your submission has been received!</div>
                                 </div>
@@ -443,6 +454,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6878854b4782d46450f79836"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
+    <script src="../asset/js/custome.js"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.36b8fb49256177c8.js"
         type="text/javascript"></script>
     <script src="https://cdn.prod.website-files.com/6878854b4782d46450f79836/js/webflow.schunk.ce27dc0b0564e9f1.js"
